--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Healthic</title>
   <meta name="description" content="Estirilizacion de equipo medico">
   <meta name="author" content="Healthic">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilo.css">
 
 </head>
@@ -20,7 +20,13 @@
             <header>
             <img src="img/logo.png" class="logohero">
                 </header>
-            <Article>
+            <Article class="articlehero">
+                <h1 class="titlehero">
+                    Quiénes somos
+                </h1>
+                <p class="texthero">
+                    Healthic es un joven emprendimiento mexicano con una visión de expansión hacia Latinoamérica, integrado por talento global, que comenzó operaciones en septiembre de 2019 y cuyo equipo cuenta con más de cincuenta años de experiencia acumulada en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.
+                </p>
             </Article>
 
         </figure>
