--- a/index.html
+++ b/index.html
@@ -20,16 +20,65 @@
             <header>
             <img src="img/logo.png" class="logohero">
                 </header>
-            <Article class="articlehero">
-                <h1 class="titlehero">
-                    Quiénes somos
-                </h1>
-                <p class="texthero">
-                    Healthic es un joven emprendimiento mexicano con una visión de expansión hacia Latinoamérica, integrado por talento global, que comenzó operaciones en septiembre de 2019 y cuyo equipo cuenta con más de cincuenta años de experiencia acumulada en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.
-                </p>
-            </Article>
-
+            <article class="scroll">
+                <div class="articlehero">
+                    <h1 class="titlehero">
+                        Quiénes somos
+                    </h1>    
+                    <p class="texthero">
+                        Healthic es un joven emprendimiento mexicano con una visión de expansión hacia Latinoamérica, integrado por talento global, que comenzó operaciones en septiembre de 2019 y cuyo equipo cuenta con más de cincuenta años de experiencia acumulada en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.
+                    </p>
+                </div>
+                <button class="downbttn">
+                <img src="img/down.png">
+            </button>
+            </article>    
         </figure>
+        <section class="ester">
+                <figure class="leftimg">
+                    <img src="img/esterilizacion.png" class="imgesteril">
+                </figure>
+                <article class="laprimera">
+                    <h1 class="primeratitle">
+                        La primera central de esterilización externa en México.
+                    </h1>
+                    <p class="primeratext">
+                        Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México:<br><br>
+                        1. Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad cliente, así como mantenimiento y reparación de instrumental y endoscopios.<br><br> 
+                        2. Logística de recolección y entrega punto a punto.<br><br> 
+                        3. Renta de instrumental estéril bajo demanda (Instrument as a Service - IaaS). 
+                    </p>
+                </article>
+            
+            </section>
+        <section class="ester reverse">
+                <figure class="leftimg">
+                    <img src="img/biodesinfectacion.png" class="imgesteril">
+                </figure>
+                <article class="laprimera">
+                    <h1 class="primeratitle">
+                        La primera central de esterilización externa en México.
+                    </h1>
+                    <p class="primeratext">
+                        Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México:<br><br>
+                        1. Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad cliente, así como mantenimiento y reparación de instrumental y endoscopios.<br><br> 
+                        2. Logística de recolección y entrega punto a punto.<br><br> 
+                        3. Renta de instrumental estéril bajo demanda (Instrument as a Service - IaaS). 
+                    </p>
+                </article>
+            
+            </section>
+        <footer>
+            <address>
+                <a href="mailto:info@healthic.com.mx">
+                    info@healthic.com.mx
+                </a><br>
+                <p>
+                    Álvaro Obregón 213, Col. Roma Norte,<br> C.P. 06700, Alcaldía Cuauhtémoc, CDMX, México
+                </p>
+            </address>
+  
+        </footer>
     </main>
   <script src="js/scripts.js"></script>
 </body>
