--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </section>
         <footer>
             <address>
-                <a href="mailto:info@healthic.com.mx">
+                <a href="mailto:info@healthic.com.mx" class="mail">
                     info@healthic.com.mx
                 </a><br>
                 <p>
