--- a/index.html
+++ b/index.html
@@ -70,13 +70,16 @@
             </section>
         <footer>
             <address>
-                <a href="mailto:info@healthic.com.mx" class="mail">
+                <a href="mailto: info@healthic.com.mx" class="mail">
                     info@healthic.com.mx
                 </a><br>
                 <p>
                     Álvaro Obregón 213, Col. Roma Norte,<br> C.P. 06700, Alcaldía Cuauhtémoc, CDMX, México
                 </p>
             </address>
+            <figure class="iconocont">
+                <img src="img/Icono.png">
+            </figure>
   
         </footer>
     </main>
