fix03 agregando todos los textos

--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
                         La primera central de esterilización externa en México.
                     </h1>
                     <p class="primeratext">
-                        Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México:<br><br>
-                        1. Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad cliente, así como mantenimiento y reparación de instrumental y endoscopios.<br><br> 
-                        2. Logística de recolección y entrega punto a punto.<br><br> 
+                        Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México:
+                        <br>
+                        <br>
+                        1. Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad cliente, así como mantenimiento y reparación de instrumental y endoscopios.
+                        <br>
+                        <br> 
+                        2. Logística de recolección y entrega punto a punto.
+                        <br>
+                        <br> 
                         3. Renta de instrumental estéril bajo demanda (Instrument as a Service - IaaS). 
                     </p>
                 </article>
@@ -57,22 +63,31 @@
                 </figure>
                 <article class="laprimera">
                     <h1 class="primeratitle">
-                        La primera central de esterilización externa en México.
+                        Servicio de Bio-Desinfección
                     </h1>
                     <p class="primeratext">
-                        Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México:<br><br>
-                        1. Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad cliente, así como mantenimiento y reparación de instrumental y endoscopios.<br><br> 
-                        2. Logística de recolección y entrega punto a punto.<br><br> 
-                        3. Renta de instrumental estéril bajo demanda (Instrument as a Service - IaaS). 
+                        El uso de vapor de peróxido de hidrógeno es un proceso de desinfección ampliamente utilizado en hospitales, industria farmacéutica y fabricación de dispositivos médicos, así como en la industria de alimentos, que ha demostrado la inactivación de patógenos altamente resistentes. Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, superficie en todo tipo de industria.
+                        <br>
+                        <br>
+                        1. Sin intervención manual del operador lo que reduce el riesgo de infección por contacto.
+                        <br>
+                        <br>
+                        2. Capaz de eliminar 99.99% de bacterias, virus y hongos, incluso influenza AH1N1 y COVID-19.
+                        <br>
+                        <br>
+                        3. Se logra una desinfección de manera uniforme de aire, superficies y partes electrónicas sin riesgo de corrosión y oxidación.
+                        <br>
+                        <br>
+                        4. Desinfección preventiva y correctiva. 
                     </p>
                 </article>
             
             </section>
         <footer>
             <address>
-                <a href="mailto: info@healthic.com.mx" class="mail">
-                    info@healthic.com.mx
-                </a><br>
+                <a href="mailto:info@healthic.com.mx" class="mail">info@healthic.com.mx</a>
+                <br>
+                <br>
                 <p>
                     Álvaro Obregón 213, Col. Roma Norte,<br> C.P. 06700, Alcaldía Cuauhtémoc, CDMX, México
                 </p>
