fix04 - arreglo en acomodo seccion de servicios

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Healthic</title>
-  <meta name="description" content="Estirilizacion de equipo medico">
-  <meta name="author" content="Healthic">
+    <meta charset="utf-8">
+    <meta name="description" content="Estirilización de equipo medico y Bio-Desinfección de espacios.">
+    <meta name="author" content="Healthic">
+    <meta property="og:image" content="/img/Ogimage.png" />
+    <title>Healthic</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilo.css">
-
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
