--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </section>
         <footer>
             <address>
-                <a href="mailto:info@healthic.com.mx" class="mail">info@healthic.com.mx</a>
+                <a class="mail" href="mailto:info@healthic.com.mx">info@healthic.com.mx</a>
                 <br>
                 <br>
                 <p>
