--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Estirilización de equipo medico y Bio-Desinfección de espacios.">
     <meta name="author" content="Healthic">
     <meta property="og:image" content="/img/Ogimage.png" />
