--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Estirilización de equipo medico y Bio-Desinfección de espacios.">
     <meta name="author" content="Healthic">
-    <meta property="og:image" content="http://www.healthic.com.mx/img/Ogimage.png" />
+    <meta property="og:image" content="http://www.healthic.com.mx/img/Ogimage.jpg" />
     <title>Healthic</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
