arreglando version movil para opcion b

--- a/opcionb.html
+++ b/opcionb.html
@@ -22,7 +22,7 @@
             <figure class="contlogo">
             <img src="img/logo-color.png" class="logohero">
                 </figure>  
-        <section class="ester reverse">
+        <section class="ester reverseb">
                 <figure class="leftimg">
                     <img src="img/biodesinfectacion.png" class="imgesteril">
                 </figure>
@@ -36,7 +36,7 @@
                 </article>
             
             </section>
-        <section class="ester">
+        <section class="ester reverseb">
                 <figure class="leftimg">
                     <img src="img/esterilizacion.png" class="imgesteril">
                 </figure>
@@ -59,7 +59,7 @@
                 </article>
             
             </section>
-        <section class="ester reverse">
+        <section class="ester reverse reverseb">
                 <figure class="leftimg">
                     <img src="img/biodesinfectacion.png" class="imgesteril">
                 </figure>
