cambiando imagen y arreglando flow en version grande

--- a/opcionb.html
+++ b/opcionb.html
@@ -24,7 +24,7 @@
                 </figure>  
         <section class="ester reverseb">
                 <figure class="leftimg">
-                    <img src="img/biodesinfectacion.png" class="imgesteril">
+                    <img src="img/f1opb.png" class="imgesteril">
                 </figure>
                 <article class="laprimerab">
                     <h1 class="primeratitleb">
@@ -36,7 +36,7 @@
                 </article>
             
             </section>
-        <section class="ester reverseb">
+        <section class="ester reverseb reverse">
                 <figure class="leftimg">
                     <img src="img/esterilizacion.png" class="imgesteril">
                 </figure>
@@ -59,7 +59,7 @@
                 </article>
             
             </section>
-        <section class="ester reverse reverseb">
+        <section class="ester  reverseb">
                 <figure class="leftimg">
                     <img src="img/biodesinfectacion.png" class="imgesteril">
                 </figure>
