agregando los svg de las orillas para simulas esquinas redondeadas

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+  <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgDER">
+<path transform="translate(-.148 -1437.3)" d="m237.36 1437.3c-3.9 127.68-108.52 230.31-237.21 230.31h237.58l-0.377-230.31h0.377"/>
+</svg>
 </div>
 <article class="QS">
    
@@ -85,7 +88,9 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/pJxGCAg1LZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </figure>
    
-    
+    <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
+<path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
+</svg>
 </article>
    <article class="SERV">
    
@@ -155,7 +160,9 @@
   </a>
 </div>
     </figure>
-    
+    <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgDER">
+<path transform="translate(-.148 -1437.3)" d="m237.36 1437.3c-3.9 127.68-108.52 230.31-237.21 230.31h237.58l-0.377-230.31h0.377"/>
+</svg>
 </article>
   <article class="biblioteca">
    <ul class="nav  mb-4" id="pills-tab" role="tablist">
@@ -332,6 +339,9 @@
                 </div>
               </div></div>
     </div>
+    <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
+<path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
+</svg>
     </article>
     <footer>
     <aside>
