--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
-    <link rel="stylesheet" href="css/slider.css">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/slider.css">
@@ -12,7 +12,6 @@
 </head>
 <body>
   <!-- Navigation -->
-
 <nav class="navbar fixed-top  navbar-expand-md">
     <a href="#" class="navbar-brand"><img src="img/logohealthic.png"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
@@ -38,35 +37,50 @@
     </ul>
     </div>
 </nav>
+    <!--Carusel fotos home-->
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
+<!--   Foto 01 -->
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
         <button>Mas Información</button>
       </div>
     </div>
+<!--    Foto 02  -->
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Líderes en bio-desinfección de superficifes para cualquier sector o espacio.</h1>
         <button>Mas Información</button>
       </div>
     </div>
+<!--  Foto 03  -->
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>La primera central de esterilización externa en México</h1>
+        <button>Mas Información</button>
+      </div>
+    </div>
+<!--  Foto 04  -->
+    <div class="carousel-item">
+      <img src="img/Home-04.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
         <button>Mas Información</button>
       </div>
     </div>
   </div>
+<!--  Flechas controladoras carusel-->
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -418,5 +432,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
