agregando type medium

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 <article class="QS">
    
-    <h3 class="titulo">Quienes Somos</h3>
+    <h3 class="titulo">Quiénes Somos</h3>
     <p class="texto"><b>Healthic ®</b> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
     <button class="boton" >Mas Información</button>
     <figure class="foto">
