--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Navigation -->
 <nav class="navbar fixed-top  navbar-expand-md">
-    <a href="#" class="navbar-brand"><img src="img/logohealthic.png"></a>
+    <a href="#" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
         <img src="img/logohealthic.png">
     </button>
@@ -106,7 +106,7 @@
 <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
 </svg>
 </article>
-   <article class="SERV">
+<article class="SERV">
    
     <h3 class="titulo">Esterilización externa</h3>
     <p class="texto">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
@@ -117,16 +117,20 @@
     <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
     <li data-target="#carouselQS" data-slide-to="1"></li>
     <li data-target="#carouselQS" data-slide-to="2"></li>
+    <li data-target="#carouselQS" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/ee-01.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/ee-02.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/ee-03.webp" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/ee-04.webp" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
@@ -141,34 +145,38 @@
     </figure>   
 </article>
   <hr>
-   <article class="SERV2">
+<article class="SERV2">
    
     <h3 class="titulo">Bio-desinfección</h3>
     <p class="texto">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
     <button class="boton" >Mas Información</button>
     <figure class="foto">
-        <div id="carouselQS" class="carousel slide" data-ride="carousel">
+        <div id="carouselBD" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselQS" data-slide-to="1"></li>
-    <li data-target="#carouselQS" data-slide-to="2"></li>
+    <li data-target="#carouselBD" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselBD" data-slide-to="1"></li>
+    <li data-target="#carouselBD" data-slide-to="2"></li>
+    <li data-target="#carouselBD" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-01.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/bd-02.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-03.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/bd-04.png" class="d-block w-100" alt="...">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselBD" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselQS" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselBD" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -178,7 +186,7 @@
 <path transform="translate(-.148 -1437.3)" d="m237.36 1437.3c-3.9 127.68-108.52 230.31-237.21 230.31h237.58l-0.377-230.31h0.377"/>
 </svg>
 </article>
-  <article class="biblioteca">
+<article class="biblioteca">
    <ul class="nav  mb-4" id="pills-tab" role="tablist">
    <h3 style="margin-right: auto">
        Biblioteca
@@ -357,7 +365,7 @@
 <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
 </svg>
     </article>
-    <footer>
+<footer>
     <aside>
         <h3>Contacto</h3>
         <button>Contrata un servicio</button>
@@ -394,7 +402,7 @@
 </form>
   
    </footer>
-   <div class="bread">
+<div class="bread">
       <div class="links">
           <a href="#">Quienes Somos</a>
           <a href="#">Nosotros</a>
