slider home en modo mobil

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <nav class="navbar fixed-top  navbar-expand-md">
     <a href="#" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
-        <img src="img/logohealthic.png">
+        <img src="img/logohealthic.png" class="enmobilhey">
     </button>
     <div class="collapse navbar-collapse" id="NavBarM">
+    
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="nosotros.html" class="nav-link">Quiénes somos</a>
@@ -50,7 +51,7 @@
 <!--   Foto 01 -->
     <div class="carousel-item active">
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
         <button>Mas Información</button>
       </div>
@@ -97,7 +98,7 @@
    
     <h3 class="titulo">Quiénes Somos</h3>
     <p class="texto"><b>Healthic ®</b> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
-    <button class="boton" >Mas Información</button>
+    <a href="" class="boton btnobscuro" >Mas Información</a>
     <figure class="foto">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/pJxGCAg1LZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </figure>
@@ -182,13 +183,13 @@
   </a>
 </div>
     </figure>
-    <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgDER">
+    <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgDER-o">
 <path transform="translate(-.148 -1437.3)" d="m237.36 1437.3c-3.9 127.68-108.52 230.31-237.21 230.31h237.58l-0.377-230.31h0.377"/>
 </svg>
 </article>
 <article class="biblioteca">
    <ul class="nav  mb-4" id="pills-tab" role="tablist">
-   <h3 style="margin-right: auto">
+   <h3 style="margin-right: auto; color: white">
        Biblioteca
    </h3>
   <li class="nav-item">
@@ -212,7 +213,7 @@
                <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
                   <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="#"><img class="card-img-top" src="img/Home-01.jpg" alt=""></a>
                     <div class="card-body">
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
                       <button>Mas Informacion</button>
@@ -221,7 +222,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
                   <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="#"><img class="card-img-top" src="img/Home-02.jpg" alt=""></a>
                     <div class="card-body">
                       <h4 class="card-title">
                         <a href="#">Project Two</a>
@@ -232,7 +233,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
                   <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="#"><img class="card-img-top" src="img/Home-03.jpg" alt=""></a>
                     <div class="card-body">
                       <h4 class="card-title">
                         <a href="#">Project Three</a>
@@ -404,25 +405,25 @@
    </footer>
 <div class="bread">
       <div class="links">
-          <a href="#">Quienes Somos</a>
+          <a href="#" class="bredtitulo">Quienes Somos</a>
           <a href="#">Nosotros</a>
           <a href="#">historia</a>
           <a href="#">Equipo</a>
       </div>
       <div class="links">
-          <a href="#">Esterilización</a>
+          <a href="#" class="bredtitulo">Esterilización</a>
           <a href="#">Proceso</a>
           <a href="#">Beneficios</a>
           <a href="#">Contratación</a>
       </div>
       <div class="links">
-          <a href="#">Desinfección</a>
+          <a href="#" class="bredtitulo">Desinfección</a>
           <a href="#">Proceso</a>
           <a href="#">Beneficios</a>
           <a href="#">Contratación</a>
       </div>
       <div class="links">
-          <a href="#">Biblioteca</a>
+          <a href="#" class="bredtitulo">Biblioteca</a>
           <a href="#">Noticias</a>
           <a href="#">Galeria</a>
           <a href="#">Fichas técnicas</a>
