--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!--    Foto 02  -->
     <div class="carousel-item">
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption  d-md-block">
         <h1>Líderes en bio-desinfección de superficifes para cualquier sector o espacio.</h1>
         <button>Mas Información</button>
       </div>
@@ -67,7 +67,7 @@
 <!--  Foto 03  -->
     <div class="carousel-item">
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption  d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
         <button>Mas Información</button>
       </div>
@@ -100,7 +100,7 @@
     <p class="texto"><b>Healthic ®</b> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
     <a href="" class="boton btnobscuro" >Mas Información</a>
     <figure class="foto">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pJxGCAg1LZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/pJxGCAg1LZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </figure>
    
     <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
