arreglando paddings serv2

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
 </g>
 </svg>
 
-
         </div>
+        <img src="img/logo02.png" class="imgfooter">
     </aside>
     <form>
      <div class="form-group">
